Adding Priscilla's logo

--- a/main.css
+++ b/main.css
@@ -127,7 +127,7 @@ h5{
     text-indent: -9999px;
     overflow: hidden;
     height: 44px;
-    background-image : url(logo.gif);
+    background-image : url(logo.jpg);
     background-position: center left;
     background-repeat: no-repeat;
 }
